--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 /.env
 /.github
 /.venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+.pytest_cache/
+.coverage
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
