feat: add user authentication and image upload functionality
- Implemented user login functionality with JWT authentication.
- Added a new login page for user authentication.
- Introduced image upload feature for cards with scaling options.
- Enhanced card management with improved logging and error handling.
- Updated dependencies in pyproject.toml and uv.lock for JWT support.
- Added slugify helper function for generating slugs from titles.
- Improved UI with user greeting and logout option.
- Added logging for application startup and user actions.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ OPENAI_MODEL=gpt-4o-mini
 BASE_URL=https://api.openai.com/v1
 # URL del servidor de la aplicación (para desarrollo local o producción)
 SERVER_URL=http://localhost:8000
+
+# Autenticación
+AUTH_USERNAME=admin
+AUTH_PASSWORD=admin
+SECRET_KEY=tu-clave-secreta-super-segura-aqui
