--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "carteles"
 version = "0.1.0"
-requires-python = ">=3.10"
+requires-python = "==3.11.*"
 dependencies = [
     "fastapi>=0.110",
     "uvicorn[standard]>=0.27",
@@ -13,6 +13,8 @@ dependencies = [
     "requests>=2.32.5",
     "numpy>=1.24",
     "pyjwt>=2.8",
+    "matplotlib>=3.10.8",
+    "scipy>=1.15.3",
 ]
 
 [tool.uv]
